Fixed the layout issues by redoing the css entirely using em and percentages

--- a/client/stylesheet/grumble.css
+++ b/client/stylesheet/grumble.css
@@ -10,14 +10,14 @@ grid-block, .main, .issue, .comments li, .comment-form, .closedIssue {
   border-radius: 1% ;
   padding: 0.5%;
   margin-bottom: 1%;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0.0625rem 0.0625rem rgba(0, 0, 0, 0.15);
   width: auto;
   margin-top: 1%;
 }
 
 /*
 .navbar .navbar-inner {
-border-radius: 0px 0px 3px 3px;
+border-radius: 0 0 0.25rem 0.25rem;
 }*/
 
 .navbar-inner {
@@ -25,7 +25,7 @@ border-radius: 0px 0px 3px 3px;
   padding:0.5%;
 }
 
-#spinner { height: 300px }
+#spinner { height: 18rem }
 .issue, .closedIssue {
   *zoom: 1;
   -webkit-transition: all 300ms 0ms;
@@ -143,16 +143,16 @@ border-radius: 0px 0px 3px 3px;
   display: block;
   padding: 0.5% 3%;
   clear: both;
-  line-height: 20px;
+  line-height: 1.25rem;
   color: #bbb;
   white-space: nowrap;
 } */
 
 .dropdown-menu span {
 display: block;
-padding: 3px 20px;
+padding: 0.25rem 1.25rem;
 clear: both;
-line-height: 20px;
+line-height: 1.25rem;
 color: #bbb;
 white-space: nowrap;
 }
@@ -162,8 +162,8 @@ white-space: nowrap;
   border-radius: 0.5%;
   background: rgba(0, 0, 0, 0.05);
   text-align: center;
-  height: 60px;
-  line-height: 60px;
+  height: 3.75rem;
+  line-height: 3.75rem;
   margin-bottom: 1%;
 }
 .load-more:hover {
@@ -186,7 +186,7 @@ white-space: nowrap;
     margin: 0 auto;
   }
 .navbar {
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
 }
 table {
     border-spacing: 0;
@@ -202,29 +202,25 @@ input[type=text],input[type=date],input[type=time], input[type=email], input[typ
   -moz-appearance: none;
   /*margin-bottom: 5%;
   width:90%;*/
-  line-height: 50px;
+  line-height: 3rem;
   border: 1% solid;
 }
 input[type=text],input[type=date],input[type=time], input[type=email], input[type=password] {
-  height: 50px;
+  height: 3rem;
 }
 select {
-  height: 70px;
+  height: 4rem;
 }
 input[type=text], input[type=email], input[type=password], textarea, select{
-  width: 445px;
+  width: auto;
 }
 fieldset{
   display: inline;  
 }
-/*input[type=submit] {
-  height: 50px;
-  margin-top: 1%;
-}*/
 label  {
   font-weight: bold;
   float: left;
-  margin-right: 1em;
+  margin-right: 1rem;
 }
 #datetime .controls, #location .controls{
   display: inline-block;
@@ -235,24 +231,24 @@ label  {
 }
 .buton{
   padding:1% 10%;
-  margin: 0px 0px 1em 0px;
+  margin: 0 0 1rem 0;
 }
 
 .closedIssue .destroy {
     cursor: pointer;
     position: absolute;
-    left: 0.5px;
-    top: 15px;
-    height: 20px;
-    width: 20px;
+    left: 0.0625rem;
+    top: 1rem;
+    height: 1.25rem;
+    width: 1.25rem;
 }
 
 .closedIssue .closedIssue-content {
-    margin-left: 30px;
+    margin-left: 2rem;
     height: auto;
     width: auto;
     overflow: hidden;
-    padding-top: 18px;
+    padding-top: 1rem;
     line-height: 1;
 }
 
@@ -260,10 +256,10 @@ label  {
 .issue .destroy {
     cursor: pointer;
     position: absolute;
-    left: 4px;
-    top: 35px;
-    height: 20px;
-    width: 20px;
+    left: 0.25rem;
+    top: 2rem;
+    height: 1.25rem;
+    width: 1.25rem;
 }
 
 
@@ -286,39 +282,39 @@ label  {
 
 .issue .issue-content {
     width: auto; 
-    margin-left: 40px;
+    margin-left: 2.5rem;
     height: auto;
-    padding-top: 18px;
+    padding-top: 1rem;
     line-height: 1;
     overflow: hidden;
 }
 
 .issue .issue-content .check {
     float: left;
-    width: 25px;
+    width: 1.5rem;
 }
 
 .footer {
   background-color: rgb(47,12,37);
   background-image: linear-gradient(to bottom, rgb(36, 97, 170), rgb(12,37,119));
   background-repeat: repeat-x;
-  border: 1px solid rgb(212,212,212);
-  box-shadow: 0px 1px 4px rgba(0,0,0,0.067);
-  margin-top: 10px;
+  border: 0.0625rem solid rgb(212,212,212);
+  box-shadow: 0 0.0625rem 0.25rem rgba(0,0,0,0.067);
+  margin-top: 0.625rem;
   width: auto;
   height: 100%;
   overflow: hidden;
 }
 .footer img {
-  margin: 25px 10px 10px 0px;
+  margin: 1.5rem 0.625rem 0.625rem 0;
   float: right;
-  width: 150px;
+  width: 30%;
 }
 .footer .footerContent {
   /*float: left;*/
-  margin: 25px 10px 0px 10px;
+  margin: 1.5rem 0.625rem 0 0.625rem;
   color: rgb(255,255,255);
-  font-size: 14px;
+  font-size: small;
 }
 .footer a {
   color: rgb(255,255,255);
@@ -332,7 +328,7 @@ label  {
 }
 #brand1, #brand2  {
   display: inline;
-  padding: 0px 5px 0px 5px;
+  padding: 0 0.25rem 0 0.25rem;
 }
 #brand1 {
   color: rgb(255, 255, 255);
@@ -346,24 +342,24 @@ label  {
   margin-right: auto;
   display: block;
   text-align: center;
-  padding: 1em;
+  padding: 1rem;
 }
 .logo {
   width: 25%;
-  padding-left: 1em;
-  padding-right: 1em;
+  padding-left: 1rem;
+  padding-right: 1rem;
   color: rgb(102,102,102);
-  font-size: 31.5px;
+  font-size: x-large;
   font-weight: bold;
   font-family: inherit;
-  line-height: 40px;
+  line-height: 2.5rem;
 }
 
 input[type='checkbox'].spacing, input[type='radio'] {
-  margin: 1em 1em 0 50%;
+  margin: 1rem 1rem 0 50%;
 }
 input[type='checkbox'] {
-  margin: 1em;
+  margin: 1rem;
 }
 
 .rightColumn {
@@ -377,41 +373,41 @@ input[type='checkbox'] {
 
 .title {
   text-align: center;
-  margin: 25px 0px 0px;
+  margin: 1.5rem 0 0;
 }
 
 input[type="text"].location {
-  width:445px;
+  width: auto;
 }
 
 .nav .pull-right {
   float: right;
   display: inline;
-  margin-right: 20px;
+  margin-right: 1.25rem;
 }
 
 .dropdown-toggle {
-  margin: 5px;
+  margin: 0.25rem;
 }
 
 .logout {
   padding: 5%;
-  margin: 5px;
+  margin: 0.25rem;
 }
 
 .control-group{
-  margin: 10px;
+  margin: 0.625rem;
 }
 .btn-primary{
-  padding: 5px;
+  padding: 0.25rem;
 }
 .fullIssue-content{
   float: left;
   width: 90%; 
-  margin-left: 40px;
+  margin-left: 2.5rem;
   height: 100%;
-  padding-top: 18px;
-  line-height: 1;
+  padding-top: 1rem;
+  line-height: 1rem;
 }
 .fullIssue-content h3{
   margin: 0;
@@ -431,15 +427,16 @@ input[type="text"].location {
 }
 .floatRight {
   float: right;
+  width: 30%;
 }
 .floatLeft {
   line-height: 1;
   overflow: hidden;
-  margin-bottom: 5px;
+  margin-bottom: 0.25rem;
 }
 
 .indent {
-  margin-left: 2em;
+  margin-left: 2rem;
   width: 95%;
 }
 .indent-left{
@@ -453,8 +450,8 @@ input[type="text"].location {
 }
 .formField label {
   position: absolute;
-  top: 15px;
-  left: 8px;
+  top: 1rem;
+  left: 0.5rem;
   -webkit-transform: translate(0, 0);
   transform: translate(0,0);
   transition: all 0.2s ease-in-out;
@@ -467,21 +464,21 @@ input[type="text"].location {
   left: 0;
 }
 .formField input {
-  padding: 15px 8px 5px;
+  padding: 1rem 0.5rem 0.25rem;
 }
 .formField textarea, .formField select {
-  padding: 25px 8px 5px;
+  padding: 1.5rem 0.5rem 0.25rem;
 }
 .formField input:focus, .formField input.filled, .formField textarea:focus {
-  /*padding: 22px 8px 10px;*/
+  /*padding: 1.25rem 0.5rem 0.625rem;*/
   background: rgba(255,255,255,1);
 } 
 .formField input:focus + label, .formField label.filled, .formField textarea:focus + label, .formField select + label{
   color: #000000;
   font-weight: bold;
-  font-size: 12px;
-  transform: translate(0, -10px);
-  -webkit-transform: translate(0, -10px);
+  font-size: small;
+  transform: translate(0, -0.625rem);
+  -webkit-transform: translate(0, -0.625rem);
   display: inline;
 }
 
